fixed bug in ChatPage with overflow

--- a/src/components/pages/chat-page/chat-footer/ChatFooter.module.scss
+++ b/src/components/pages/chat-page/chat-footer/ChatFooter.module.scss
@@ -2,10 +2,9 @@
   flex-shrink: 0;
   background-color: #d1ffec;
   box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.08), -1px 0 0 0 rgba(0, 0, 0, 0.08);
-  display: flex;
-  align-items: center;
   background: var(--base-white);
 
   &__content {
+
   }
 }
