--- a/src/components/pages/chat-page/chat-footer/attached-content-wrapper/AttachedContentWrapper.module.scss
+++ b/src/components/pages/chat-page/chat-footer/attached-content-wrapper/AttachedContentWrapper.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  overflow-x: auto;
+  overflow-x: auto !important;
   white-space: nowrap;
   will-change: transform;
   @media screen and (min-width: 991px) {
@@ -23,6 +23,8 @@
     border-radius: 4px;
     background-color: var(--base-grey-whisper);
     overflow-y: hidden;
+    max-width: 100px;
+    flex-shrink: 0;
   }
 
   &__media {
@@ -41,7 +43,7 @@
     flex-direction: column;
     justify-content: center;
     height: 60px;
-    width: 90px;
+    width: 90px !important;
     gap: 4px;
     padding: 5px;
   }
@@ -55,6 +57,7 @@
     justify-content: center;
     width: 20px;
     height: 20px;
+    user-select: none;
   }
 
   &__cross-icon {
@@ -86,7 +89,9 @@
     font-weight: 500;
     font-size: 14px;
     color: var(--base-black);
+    text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
+    max-width: 100%; // Ограничиваем ширину текста
   }
 }
